<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
tools:ignore="MergeRootFrame" >

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_menu"
    android:id="@+id/main_menu"/>

<Button
    android:layout_below="@id/main_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/host_add_songs"
    android:id="@+id/host_add_songs"/>

<TextView
    android:text="@string/hello_world"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id = "@+id/hello_world"
    android:layout_below="@id/host_add_songs"/>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:padding="6dip">

    <Button
        android:background="@drawable/play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/play"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/next"
        android:id="@+id/next"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>

</RelativeLayout>
