<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
tools:ignore="MergeRootFrame" >

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_menu"
    android:id="@+id/main_menu"/>

<<<<<<< HEAD:app/src/main/res/layout/fragment_host.xml
    <TextView
    android:text="@string/suggested_songs"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/main_menu"
    android:textSize="20sp"
    android:id="@+id/textView" />
=======
<Button
    android:layout_below="@id/main_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/host_add_songs"
    android:id="@+id/host_add_songs"/>

>>>>>>> suggestionImplementation:app/src/main/res/layout/fragment_host_main.xml

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:padding="6dip"
<<<<<<< HEAD:app/src/main/res/layout/fragment_host.xml
    android:id="@+id/relativeLayout2">
=======
    android:id="@+id/relativeLayout">
>>>>>>> suggestionImplementation:app/src/main/res/layout/fragment_host_main.xml

    <Button
        android:background="@drawable/play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/play"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/volume"
        android:layout_height="60dp"
        android:layout_width="60dp"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/volumeon"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/next"
        android:id="@+id/next"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD:app/src/main/res/layout/fragment_host.xml
        android:id="@+id/suggested"
        android:layout_above="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView" />
=======
        android:id="@+id/queue"
        android:layout_below="@+id/host_add_songs"
        android:layout_alignRight="@+id/main_menu"
        android:layout_alignEnd="@+id/main_menu"
        android:layout_above="@+id/relativeLayout" />
>>>>>>> suggestionImplementation:app/src/main/res/layout/fragment_host_main.xml

</RelativeLayout>
